Blog pages title and links update

--- a/src/app/anansipalaceforkids/anansipalaceforkids.component.html
+++ b/src/app/anansipalaceforkids/anansipalaceforkids.component.html
@@ -201,7 +201,7 @@
                         </div>
                         <img src="../../assets/image/portfolio/case/case-1.webp" width="100%" alt="case-1"> 
                     </a>
-                    <a routerLink="/anansi-palace" class="case-items" ngxSlickItem>
+                    <!-- <a routerLink="/anansi-palace" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <h3 class="logo_card">Anansipalaceforkid</h3>
                             <div class="bottom_card">
@@ -210,7 +210,7 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-3.webp" width="100%" alt="case-1">
-                    </a> 
+                    </a>  -->
                     <a routerLink="/paris-select" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <h3 class="logo_card text">Paris Select</h3>
