--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="blog_cards_wrapper flex" id="blogFilter">
-                <a routerLink="/resource" class="blog_card_wrap">
+                <a routerLink="/resource/tips-for-optimizing-your-shopify-store" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog-one">
                     </div>
@@ -22,7 +22,7 @@
                         <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
                     </div>
                 </a>
-                <a routerLink="/resource-3" class="blog_card_wrap">
+                <a routerLink="/resource/use-instagram-to-drive-sales" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog-two">
                     </div>
@@ -31,7 +31,7 @@
                         <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLink="/resource-2" class="blog_card_wrap">
+                <a routerLink="/resource/apps-for-streamlining-your-business" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog-three">
                     </div>
@@ -40,7 +40,7 @@
                         <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
                     </div>
                 </a>
-                <a routerLink="/resource-4" class="blog_card_wrap">
+                <a routerLink="/resource/benefits-of-integrating-email-marketing" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-four.webp" alt="blog-four">
                     </div>
@@ -49,7 +49,7 @@
                         <p>The Benefits of Integrating Email Marketing into Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLink="/resource-5" class="blog_card_wrap">
+                <a routerLink="/resource/build-a-winning-shopify-store" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-five.webp" alt="blog-five">
                     </div>
@@ -58,7 +58,7 @@
                         <p>How to Build a Winning Shopify Store Design</p>
                     </div>
                 </a>
-                <a routerLink="/resource-6" class="blog_card_wrap">
+                <a routerLink="/resource/power-of-language-translation-with-langshop-app" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-six.webp" alt="blog-six">
                     </div>
@@ -67,76 +67,76 @@
                         <p>Unlock Global Growth: Harness the Power of Language Translation with LangShop App</p>
                     </div>
                 </a>
-                <a routerLink="/resource-7" class="blog_card_wrap">
+                <a routerLink="/resource/websites-seo-ranking-with-html-and-xml-sitemaps" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-seven.webp" alt="blog-seven">
                     </div>
                     <div class="blog-title-text">
                         <h3>April 13, 2023</h3>
-                        <p>use & benifit SEO HTML and XML Sitemap</p>
+                        <p>Boost Your Website's SEO Ranking with HTML and XML Sitemaps</p>
                     </div>
                 </a>
-                <a routerLink="/resource-8" class="blog_card_wrap">
+                <a routerLink="/resource/potential-of-pickup-delivery-date-in-the-pickeasy-app" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-eight.webp" alt="blog-eight">
                     </div>
                     <div class="blog-title-text">
                         <h3>April 28, 2023</h3>
-                        <p>use & benifit Pickup Delivery Date - Pickeasy App</p>
+                        <p>Unleashing the Potential of Pickup Delivery Date in the Pickeasy App</p>
                     </div>
                 </a>
-                <a routerLink="/resource-9" class="blog_card_wrap">
+                <a routerLink="/resource/best-auto-discounts-app-for-shopify-store" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-nine.webp" alt="blog-nine">
                     </div>
                     <div class="blog-title-text">
                         <h3>May 05, 2023</h3>
-                        <p>use & benifit Abra Auto Applied Discounts</p>
+                        <p>Best Auto Discounts app for shopify store - Abra Auto</p>
                     </div>
                 </a>
-                <a routerLink="/resource-10" class="blog_card_wrap">
+                <a routerLink="/resource/auto-add-to-cart-free-gift-on-eg-auto" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-ten.webp" alt="blog-ten">
                     </div>
                     <div class="blog-title-text">
                         <h3>May 29, 2023</h3>
-                        <p>EG Auto Add to Cart Free Gift</p>
+                        <p>Maximising Savings: Auto Add to Cart Free Gift on EG Auto</p>
                     </div>
                 </a>
-                <a routerLink="/resource-11" class="blog_card_wrap">
+                <a routerLink="/resource/elevate-your-shopify-store-with-the-section-store" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-eleven.webp" alt="blog-eleven">
                     </div>
                     <div class="blog-title-text">
                         <h3>june 09, 2023</h3>
-                        <p>Section Store</p>
+                        <p>Elevate Your Shopify Store  with the Section Store Theme Sections App</p>
                     </div>
                 </a>
-                <a routerLink="/resource-12" class="blog_card_wrap">
+                <a routerLink="/resource/a-reliable-tool-to-calculate-shipping-rates" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-twelve.webp" alt="blog-twelve">
                     </div>
                     <div class="blog-title-text">
                         <h3>June 23, 2023</h3>
-                        <p>Shipping Rates - Shipeasy</p>
+                        <p>Looking for a reliable tool to calculate shipping rates? Consider the Shipeasy App!</p>
                     </div>
                 </a>
-                <a routerLink="/resource-13" class="blog_card_wrap">
+                <a routerLink="/resource/the-impact-of-a-countdown-timer-bar-app" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-thirteen.webp" alt="blog-thirteen">
                     </div>
                     <div class="blog-title-text">
                         <h3>July 13, 2023</h3>
-                        <p>Essential Countdown Timer Bar</p>
+                        <p>Elevate Your Efficiency: The Impact of a Countdown Timer Bar App</p>
                     </div>
                 </a>
-                <a routerLink="/resource-14" class="blog_card_wrap">
+                <a routerLink="/resource/maximising-roi-multi-facebook-pixels" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-fourteen.webp" alt="blog-fourteen">
                     </div>
                     <div class="blog-title-text">
                         <h3>July 30, 2023</h3>
-                        <p>Pixelio Multi Facebook Pixels</p>
+                        <p>Maximising ROI multi facebook pixels</p>
                     </div>
                 </a>
             </div>
