--- a/src/app/fameschocolates/fameschocolates.component.html
+++ b/src/app/fameschocolates/fameschocolates.component.html
@@ -241,7 +241,7 @@
                         </div>
                         <img src="../../assets/image/portfolio/case/case-6.webp" width="100%" alt="case-1">
                     </a>
-                    <a routerLink="/fames-chocolates" class="case-items" ngxSlickItem>
+                    <!-- <a routerLink="/fames-chocolates" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <h3 class="logo_card">FAMESCHOCOLATES</h3>
                             <div class="bottom_card">
@@ -250,7 +250,7 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-7.webp" width="100%" alt="case-1">
-                    </a>  
+                    </a>   -->
                     <a routerLink="/egyptian" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <img class="logo_card egyptian" src="../../assets/image/attachment-egyptian.png" width="100%" alt="">
