--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -89,26 +89,22 @@
                                 </a>
                             </li>
                             <li class="icon-list">
-                                <a href="#">
-                                    <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M20.2563 2.36764C19.5215 2.76923 18.7303 3.04081 17.9003 3.16215C18.7479 2.5381 19.3982 1.54857 19.7046 0.369808C18.911 0.947635 18.0341 1.368 17.0973 1.59335C16.3507 0.612495 15.2836 0 14.1027 0C11.8382 0 10.001 2.26074 10.001 5.04875C10.001 5.44457 10.0362 5.82882 10.1067 6.19863C6.69645 5.98772 3.67362 3.97978 1.64861 0.921633C1.29526 1.66992 1.09335 2.5381 1.09335 3.46262C1.09335 5.21343 1.81766 6.75912 2.91879 7.66486C2.24731 7.6403 1.61339 7.41062 1.05931 7.03503V7.09715C1.05931 9.54424 2.47387 11.5854 4.35214 12.0477C4.00818 12.1661 3.64544 12.2254 3.27096 12.2254C3.00683 12.2254 2.74857 12.195 2.49853 12.1358C3.02092 14.1408 4.53527 15.6013 6.33136 15.6403C4.92736 16.9953 3.15709 17.8028 1.23539 17.8028C0.904349 17.8028 0.576826 17.7797 0.256348 17.7335C2.0724 19.1636 4.23005 20 6.54619 20C14.0945 20 18.2208 12.3077 18.2208 5.63525C18.2208 5.41567 18.2173 5.1961 18.2102 4.98086C19.012 4.26869 19.7081 3.38028 20.2563 2.36764Z" fill="white"/>
-                                        </svg>
+                                <a href="https://www.instagram.com/codesdesk/?hl=en">
+                                   <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18ZM12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z" fill="#ffffff"></path> <path d="M18 5C17.4477 5 17 5.44772 17 6C17 6.55228 17.4477 7 18 7C18.5523 7 19 6.55228 19 6C19 5.44772 18.5523 5 18 5Z" fill="#ffffff"></path> <path fill-rule="evenodd" clip-rule="evenodd" d="M1.65396 4.27606C1 5.55953 1 7.23969 1 10.6V13.4C1 16.7603 1 18.4405 1.65396 19.7239C2.2292 20.8529 3.14708 21.7708 4.27606 22.346C5.55953 23 7.23969 23 10.6 23H13.4C16.7603 23 18.4405 23 19.7239 22.346C20.8529 21.7708 21.7708 20.8529 22.346 19.7239C23 18.4405 23 16.7603 23 13.4V10.6C23 7.23969 23 5.55953 22.346 4.27606C21.7708 3.14708 20.8529 2.2292 19.7239 1.65396C18.4405 1 16.7603 1 13.4 1H10.6C7.23969 1 5.55953 1 4.27606 1.65396C3.14708 2.2292 2.2292 3.14708 1.65396 4.27606ZM13.4 3H10.6C8.88684 3 7.72225 3.00156 6.82208 3.0751C5.94524 3.14674 5.49684 3.27659 5.18404 3.43597C4.43139 3.81947 3.81947 4.43139 3.43597 5.18404C3.27659 5.49684 3.14674 5.94524 3.0751 6.82208C3.00156 7.72225 3 8.88684 3 10.6V13.4C3 15.1132 3.00156 16.2777 3.0751 17.1779C3.14674 18.0548 3.27659 18.5032 3.43597 18.816C3.81947 19.5686 4.43139 20.1805 5.18404 20.564C5.49684 20.7234 5.94524 20.8533 6.82208 20.9249C7.72225 20.9984 8.88684 21 10.6 21H13.4C15.1132 21 16.2777 20.9984 17.1779 20.9249C18.0548 20.8533 18.5032 20.7234 18.816 20.564C19.5686 20.1805 20.1805 19.5686 20.564 18.816C20.7234 18.5032 20.8533 18.0548 20.9249 17.1779C20.9984 16.2777 21 15.1132 21 13.4V10.6C21 8.88684 20.9984 7.72225 20.9249 6.82208C20.8533 5.94524 20.7234 5.49684 20.564 5.18404C20.1805 4.43139 19.5686 3.81947 18.816 3.43597C18.5032 3.27659 18.0548 3.14674 17.1779 3.0751C16.2777 3.00156 15.1132 3 13.4 3Z" fill="#ffffff"></path> </g></svg>
                                 </a>
                             </li>
                             <li class="icon-list">
-                                <a href="#">
-                                    <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M20.2463 4.62406C20.1593 6.87806 18.7975 9.95924 16.1705 13.869C13.4517 17.9572 11.148 20 9.26528 20C8.1011 20 7.11448 18.7572 6.30895 16.2633C5.76919 13.9753 5.23296 11.6872 4.69437 9.40596C4.09464 6.91076 3.45257 5.66384 2.76582 5.66384C2.61648 5.66384 2.09553 6.0277 1.19711 6.75677L0.256348 5.35177C1.24179 4.35015 2.21312 3.34444 3.17152 2.34145C4.48388 1.02503 5.4705 0.334117 6.12903 0.261892C7.68128 0.0874594 8.6385 1.31802 8.99952 3.9495C9.38406 6.79084 9.65452 8.55697 9.80387 9.24924C10.2531 11.6041 10.7446 12.7788 11.2832 12.7788C11.7007 12.7788 12.3286 12.0184 13.1659 10.4962C14.0032 8.97124 14.4489 7.8129 14.51 7.01433C14.63 5.69791 14.1819 5.04379 13.1659 5.04379C12.6873 5.04379 12.1934 5.16099 11.6866 5.40628C12.6744 1.70096 14.5559 -0.100601 17.3358 0.00433161C19.3949 0.0711062 20.3674 1.61374 20.2463 4.62406Z" fill="white"/>
-                                        </svg>
+                                <a href="https://www.linkedin.com/company/codesdesk/about/">
+                                    <svg width="20px" height="20px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>linkedin [#fffffffffff]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-180.000000, -7479.000000)" fill="#ffffff"> <g id="icons" transform="translate(56.000000, 160.000000)"> <path d="M144,7339 L140,7339 L140,7332.001 C140,7330.081 139.153,7329.01 137.634,7329.01 C135.981,7329.01 135,7330.126 135,7332.001 L135,7339 L131,7339 L131,7326 L135,7326 L135,7327.462 C135,7327.462 136.255,7325.26 139.083,7325.26 C141.912,7325.26 144,7326.986 144,7330.558 L144,7339 L144,7339 Z M126.442,7323.921 C125.093,7323.921 124,7322.819 124,7321.46 C124,7320.102 125.093,7319 126.442,7319 C127.79,7319 128.883,7320.102 128.883,7321.46 C128.884,7322.819 127.79,7323.921 126.442,7323.921 L126.442,7323.921 Z M124,7339 L129,7339 L129,7326 L124,7326 L124,7339 Z" id="linkedin-[#fffffffffff]"> </path> </g> </g> </g> </g></svg>
                                 </a>
                             </li>
-                            <li class="icon-list">
+                            <!-- <li class="icon-list">
                                 <a href="#">
                                     <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M19.2613 1.49198C19.8607 2.35482 20.0563 4.31421 20.0563 4.31421C20.0563 4.31421 20.2563 6.61572 20.2563 8.91634V11.0739C20.2563 13.3754 20.0563 15.676 20.0563 15.676C20.0563 15.676 19.8607 17.6354 19.2613 18.4982C18.5761 19.519 17.8163 19.6244 17.3868 19.684C17.3395 19.6906 17.2963 19.6966 17.2576 19.7032C14.4588 19.9911 10.2563 20 10.2563 20C10.2563 20 5.05635 19.9325 3.45635 19.7139C3.38054 19.6937 3.28865 19.6781 3.18458 19.6603C2.67777 19.5739 1.88229 19.4382 1.25072 18.4982C0.651348 17.6354 0.456348 15.676 0.456348 15.676C0.456348 15.676 0.256348 13.3754 0.256348 11.0739V8.91634C0.256348 6.61572 0.456348 4.31421 0.456348 4.31421C0.456348 4.31421 0.651348 2.35482 1.25072 1.49198C1.93751 0.469822 2.69806 0.3655 3.12758 0.306584C3.17415 0.300197 3.21683 0.294343 3.2551 0.287911C6.05385 0 10.252 0 10.252 0H10.2607C10.2607 0 14.4588 0 17.2576 0.287911C17.2959 0.294352 17.3386 0.300214 17.3852 0.306613C17.8144 0.365534 18.5752 0.469988 19.2613 1.49198ZM8.19067 5.69828L8.1913 13.6878L13.5944 9.70681L8.19067 5.69828Z" fill="white"/>
                                         </svg>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
@@ -142,5 +138,26 @@
         <div class="mobile_copy_text mobile">
             <p>© Codesdesk Technology Pvt. Ltd. 2022 | All Rights Reserved.</p>
         </div>
+       <div class="popup-cookies">
+        <div class="cookie-overlay-back">
+            <div class="cookies-pop-up">
+                <div class="cookie-top"></div>
+                <span><img src="../../assets/image/cookie-pic.png" width="100%"  alt="cookies"></span>
+                <div class="cookie-bottom">
+                    <h2 class="cookie-heading">
+                        We Care About Your Privacy
+                    </h2>
+                    <p class="cookie-text">
+                        Take control of your privacy. Customize your cookie preferences to enhance your browsing experience. Learn more about our cookie usage and privacy policy.
+                    </p>
+                    <div class="cookie-btns">
+                        <a id="cookie-btn" class="cookie-accept">Accept All</a>
+                        <a id="decline-cookie" class="cookie-decline">Decline</a>
+                    </div>
+                    <a routerLink="/privacy" class="read-more-cookie">Read More</a>
+                </div>
+            </div>
+        </div>
+       </div>
     </div>
 </footer>
