--- a/src/app/gripps/gripps.component.html
+++ b/src/app/gripps/gripps.component.html
@@ -231,7 +231,7 @@
                         </div>
                         <img src="../../assets/image/portfolio/case/case-5.webp" width="100%" alt="case-1"> 
                     </a>
-                    <a routerLink="/gripps" class="case-items" ngxSlickItem>
+                    <!-- <a routerLink="/gripps" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <h3 class="logo_card">GRIPPS</h3>
                             <div class="bottom_card">
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-6.webp" width="100%" alt="case-1">
-                    </a>
+                    </a> -->
                     <a routerLink="/fames-chocolates" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <h3 class="logo_card">FAMESCHOCOLATES</h3>
