--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -62,7 +62,7 @@
                         <a routerLinkActive="active" routerLink="/our-work">Protfolio</a>
                     </li>
                     <li>
-                        <a routerLinkActive="active" routerLink="/blog-list">blogs</a>
+                        <a routerLinkActive="active" routerLink="/resource">blogs</a>
                     </li>
                 </ul>
                 <div class="bnt-wrap">
@@ -109,7 +109,7 @@
                     <a class="menu-item" routerLinkActive="active" routerLink="/our-work">Protfolio</a>
                 </li>
                 <li>
-                    <a class="menu-item" routerLinkActive="active" routerLink="/blog-list">blogs</a>
+                    <a class="menu-item" routerLinkActive="active" routerLink="/resource">blogs</a>
                 </li>
                 <li>
                     <a class="menu-item" routerLinkActive="active" routerLink="/our-team">team</a>
