--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -211,7 +211,7 @@
             </div>
             <div class="our_work_body_wrap">
                 <div class="our_work-images_wrap flex wrap">
-                    <a routerLinkActive="active" routerLink="/luxandnyx" class="work-image_one work-image_all">
+                    <a routerLinkActive="active" routerLink="/our-work/luxandnyx" class="work-image_one work-image_all">
                         <div class="card-h-txt">
                             <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt="">
                             <div class="bottom_card">
@@ -226,7 +226,7 @@
                         <h4 class="card-heading">luxandnyx</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
-                    <a routerLinkActive="active" routerLink="/paris-select" class="work-image_two work-image_all">
+                    <a routerLinkActive="active" routerLink="/our-work/paris-select" class="work-image_two work-image_all">
                         <div class="card-h-txt">
                             <!-- <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt=""> -->
                             <h3 class="logo_card">Paris Select</h3>
@@ -244,7 +244,7 @@
                     </div>
                 </div>
                 <div class="our_work-images_wrap flex wrap second">
-                    <a routerLink="/egyptian" class="work-image_three work-image_all">
+                    <a routerLink="/our-work/egyptian" class="work-image_three work-image_all">
                         <div class="card-h-txt">
                             <!-- <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt=""> -->
                             <h3 class="logo_card">Egyptianqueenbeauty</h3>
@@ -260,25 +260,9 @@
                         <h4 class="card-heading">Egyptianqueenbeauty</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
-                    <!-- <div class="work-image_four work-image_all">
-                        <div class="card-h-txt">
-                            <img class="logo_card igluu" src="../../assets/image/attachment-igluu.png" width="100%" alt="">
-                            <div class="bottom_card">
-                            <h4 class="card-heading">Igluu Meal Prep</h4>
-                            <p class="card-txt">Shopify Plus Design & Build</p>
-                            </div>
-                        </div>
-                        <img class="desktop" src="../../assets/image/portfolio/our_work_4.webp" alt="">
-                        <img class="mobile" src="../../assets/image/portfolio/our_work_4-mobile.webp" alt="">
-                    </div>
-                    <div class="our_card_bottom_text mobile">
-                        <h4 class="card-heading">Igluu Meal Prep</h4>
-                        <p class="card-txt">Shopify Plus Design & Build</p>
-                    </div> -->
-                    <div class="work-image_four work-image_all">
+                    <a routerLink="our-work/" class="work-image_four work-image_all">
                         <div class="card-h-txt">
                             <img class="logo_card mresi" src="../../assets/image/attachment-mersi.png" width="100%" alt="">
-                            <!-- <h3 class="logo_card">Mersi Distribution</h3> -->
                             <div class="bottom_card">
                             <h4 class="card-heading">Mersi Distribution</h4>
                             <p class="card-txt">Shopify Plus Design & Build</p>
@@ -286,7 +270,7 @@
                         </div>
                         <img class="desktop" src="../../assets/image/portfolio/our_work_5.webp" alt="">
                         <img class="mobile" src="../../assets/image/portfolio/our_work_5-mobile.webp" alt="">
-                    </div>
+                    </a>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">Mersi Distribution</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
@@ -312,7 +296,7 @@
                         We partner with the best in the industry to ensure our clients are at the cutting edge of e‑commerce.
                     </h2>
                 </div>
-                <div class="partner_bottom_logos flex desktop">
+                <div class="partner_bottom_logos flex">
                     <a target="_blank" href="https://www.shopify.com/in" class="part_logo">
                         <img src="../../assets/image/shopify.webp" alt="">
                     </a>
@@ -331,30 +315,6 @@
                     <a target="_blank" href="https://www.shopify.com/in/plus" class="part_logo">
                         <img src="../../assets/image/shopify-plus.webp" alt="">
                     </a>
-                </div>
-                <div class="partner_bottom_logos_mobile mobile">
-                    <div class="upper-logos flex">
-                        <a target="_blank" href="https://www.shopify.com/in" class="part_logo">
-                            <img src="../../assets/image/shopify-mobile.webp" alt="">
-                        </a>
-                        <a target="_blank" href="https://mailchimp.com/" class="part_logo">
-                            <img src="../../assets/image/mailchimp-mobile.webp" alt="">
-                        </a>
-                        <a target="_blank" href="https://shippsy.com/" class="part_logo not_wargin">
-                            <img src="../../assets/image/shippsy-mobile.webp" alt="">
-                        </a>
-                    </div>
-                    <div class="lower-logos flex">
-                        <a target="_blank" href="" class="part_logo">
-                            <img src="../../assets/image/recharge-mobile.webp" alt="">
-                        </a>
-                        <a target="_blank" href="https://www.klaviyo.com/" class="part_logo">
-                            <img src="../../assets/image/klaviyo-update-mobile.webp" alt="">
-                        </a>
-                        <a target="_blank" href="https://www.shopify.com/in/plus" class="part_logo not_wargin">
-                            <img src="../../assets/image/shopify-plus-mobile.webp" alt="">
-                        </a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -375,7 +335,7 @@
                 </div>
             </div>
             <div class="blog_cards_wrapper flex">
-                <a routerLink="/resource" class="blog_card_wrap">
+                <a routerLink="/resource/tips-for-optimizing-your-shopify-store" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
                     </div>
@@ -384,7 +344,7 @@
                         <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
                     </div>
                 </a>
-                <a routerLink="/resource-3" class="blog_card_wrap">
+                <a routerLink="/resource/use-instagram-to-drive-sales" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
@@ -393,7 +353,7 @@
                         <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLink="/resource-2" class="blog_card_wrap">
+                <a routerLink="/resource/apps-for-streamlining-your-business" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
