--- a/src/app/protech/protech.component.html
+++ b/src/app/protech/protech.component.html
@@ -221,7 +221,7 @@
                         </div>
                         <img src="../../assets/image/portfolio/case/case-4.webp" width="100%" alt="case-4">
                     </a>   
-                    <a routerLink="/protech" class="case-items" ngxSlickItem>
+                    <!-- <a routerLink="/protech" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <img class="logo_card protech" src="../../assets/image/attachment-protech.png" width="100%" alt="">
                             <div class="bottom_card">
@@ -230,7 +230,7 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-5.webp" width="100%" alt="case-1"> 
-                    </a>
+                    </a> -->
                     <a routerLink="/gripps" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <h3 class="logo_card">GRIPPS</h3>
