--- a/src/app/resource-10/resource-10.component.html
+++ b/src/app/resource-10/resource-10.component.html
@@ -2,7 +2,7 @@
     <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
-                EG Auto Add to Cart Free Gift
+                Maximising Savings: Auto Add to Cart Free Gift on EG Auto
             </h1>
             <div class="date-and-link-wrap flex-end">
                 <div class="date-wrap">
