--- a/src/app/resource-12/resource-12.component.html
+++ b/src/app/resource-12/resource-12.component.html
@@ -2,7 +2,7 @@
     <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
-                Shipping Rates - Shipeasy
+                Looking for a reliable tool to calculate shipping rates? Consider the Shipeasy App!
             </h1>
             <div class="date-and-link-wrap flex-end">
                 <div class="date-wrap">
