--- a/src/app/resource-13/resource-13.component.html
+++ b/src/app/resource-13/resource-13.component.html
@@ -2,7 +2,7 @@
     <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
-                Essential Countdown Timer Bar
+                Elevate Your Efficiency: The Impact of a Countdown Timer Bar App
             </h1>
             <div class="date-and-link-wrap flex-end">
                 <div class="date-wrap">
