--- a/src/app/resource-7/resource-7.component.html
+++ b/src/app/resource-7/resource-7.component.html
@@ -2,7 +2,7 @@
     <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
-                use & benifit SEO HTML and XML Sitemap
+                Boost Your Website's SEO Ranking with HTML and XML Sitemaps
             </h1>
             <div class="date-and-link-wrap flex-end">
                 <div class="date-wrap">
