--- a/src/app/resource-8/resource-8.component.html
+++ b/src/app/resource-8/resource-8.component.html
@@ -2,7 +2,7 @@
     <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
-                use & benifit Pickup Delivery Date - Pickeasy App
+                Unleashing the Potential of Pickup Delivery Date in the Pickeasy App
             </h1>
             <div class="date-and-link-wrap flex-end">
                 <div class="date-wrap">
