--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -18,7 +18,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-clip: border-box;
     background-origin: border-box;
     height: 100vh;
