--- a/src/app/blog-detail/blog-detail.component.html
+++ b/src/app/blog-detail/blog-detail.component.html
@@ -79,16 +79,7 @@
                 </div>
             </div>
             <div class="blog_cards_wrapper flex" id="blogFilter">
-                <a routerLink="/resource" class="blog_card_wrap">
-                    <div class="blog-img">
-                        <img src="../../assets/image/blogs/blog-one.webp" alt="blog">
-                    </div>
-                    <div class="blog-title-text">
-                        <h3>January 02, 2023</h3>
-                        <p>5 Tips for Optimizing Your Shopify Store's SEO</p>
-                    </div>
-                </a>
-                <a routerLink="/resource-3" class="blog_card_wrap">
+                <a routerLink="/resource/use-instagram-to-drive-sales" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-two.webp" alt="blog">
                     </div>
@@ -97,13 +88,22 @@
                         <p>How to Use Instagram to Drive Sales on Your Shopify Store</p>
                     </div>
                 </a>
-                <a routerLink="/resource-2" class="blog_card_wrap">
+                <a routerLink="/resource/apps-for-streamlining-your-business" class="blog_card_wrap">
                     <div class="blog-img">
                         <img src="../../assets/image/blogs/blog-three.webp" alt="blog">
                     </div>
                     <div class="blog-title-text">
                         <h3>February 06, 2023</h3>
                         <p>5 Best Shopify Apps for Streamlining Your Business Operations</p>
+                    </div>
+                </a>
+                <a routerLink="/resource/benefits-of-integrating-email-marketing" class="blog_card_wrap">
+                    <div class="blog-img">
+                        <img src="../../assets/image/blogs/blog-four.webp" alt="blog-four">
+                    </div>
+                    <div class="blog-title-text">
+                        <h3>February 27, 2023</h3>
+                        <p>The Benefits of Integrating Email Marketing into Your Shopify Store</p>
                     </div>
                 </a>
             </div>
