--- a/src/app/egyptianqueenbeauty/egyptianqueenbeauty.component.html
+++ b/src/app/egyptianqueenbeauty/egyptianqueenbeauty.component.html
@@ -251,7 +251,7 @@
                         </div>
                         <img src="../../assets/image/portfolio/case/case-7.webp" width="100%" alt="case-1">
                     </a>  
-                    <a routerLink="/egyptian" class="case-items" ngxSlickItem>
+                    <!-- <a routerLink="/egyptian" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <img class="logo_card egyptian" src="../../assets/image/attachment-egyptian.png" width="100%" alt="">
                             <div class="bottom_card">
@@ -260,7 +260,7 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-8.webp" width="100%" alt="case-1">
-                    </a>
+                    </a> -->
                     <a routerLink="" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <img class="logo_card mresi" src="../../assets/image/attachment-mersi.png" width="100%" alt="">
