--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -115,6 +115,98 @@
     line-height: normal;
     font-family: var(--second-heading);
 }
+.popup-cookies {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: #231f20c9;
+}
+.cookie-overlay-back {
+    position: relative;
+    height: 100%;
+}
+.cookies-pop-up {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    max-width: 600px;
+    z-index: 9;
+    border-radius: 10px;
+}
+.cookies-pop-up .cookie-top {
+    background: #37C8AE;
+    height: 95px;
+    border-radius: 10px 10px 0 0;
+    
+}
+.cookies-pop-up .cookie-bottom {
+    padding: 106px 70px 36px;
+    text-align: center;
+    position: relative;
+    background: linear-gradient(175deg, rgba(1,12,22,1) 26%, rgba(12,55,48,1) 100%);
+    border-radius: 0 0 10px 10px;
+}
+.cookies-pop-up .cookie-bottom .cookie-heading {
+    font-size: 26px;
+    font-family: var(--main-heading-font);
+    line-height: 40px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+.cookies-pop-up .cookie-bottom .cookie-text {
+    font-size: 15px;
+    font-family: var(--main-heading-font);
+    line-height: 25px;
+    font-weight: 400;
+    margin-bottom: 35px;
+}
+.cookies-pop-up .cookie-bottom .cookie-btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 20px;
+    margin-bottom: 35px;
+}
+.cookies-pop-up .cookie-bottom .cookie-btns .cookie-accept,
+.cookies-pop-up .cookie-bottom .cookie-btns .cookie-decline {
+    background: #37C8AE;
+    text-decoration: none;
+    color: #000;
+    width: 100%;
+    max-width: 155px;
+    height: 37px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    font-size: 16px;
+    line-height: 25px;
+    font-weight: 400;
+    font-family: var(--main-heading-font);
+}
+.cookies-pop-up .cookie-bottom .read-more-cookie {
+    color: #37C8AE;
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 25px;
+    font-weight: 400;
+    font-family: var(--main-heading-font);
+}
+.cookies-pop-up span {
+    display: block;
+    position: absolute;
+    top: 34px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+.cookies-pop-up span img {
+    display: block;
+    max-width: 156px;
+}
 @media only screen and (min-width:992px) and (max-width:1024px) {
     .newsletter_input_wrap form input[type="email"] {
         width: 310px;
@@ -290,5 +382,26 @@
         font-weight: 400;
         line-height: 22px;
         opacity: 0.75;
+    }
+    .cookies-pop-up {
+        right: 17px;
+        width: 92%;
+    }
+    .cookies-pop-up .cookie-bottom {
+        padding: 106px 14px 30px;
+    }
+    .cookies-pop-up .cookie-bottom .cookie-heading {
+        font-size: 22px;
+        line-height: 27px;
+        margin-bottom: 15px;
+    }
+    .cookies-pop-up .cookie-bottom .cookie-btns {
+        row-gap: 9px;
+        margin-bottom: 9px;
+        flex-direction: column;
+    }
+    .cookies-pop-up .cookie-bottom .cookie-btns .cookie-accept,
+    .cookies-pop-up .cookie-bottom .cookie-btns .cookie-decline {
+        max-width: 283px;
     }
 }
