--- a/src/app/paris-select/paris-select.component.html
+++ b/src/app/paris-select/paris-select.component.html
@@ -211,7 +211,7 @@
                         </div>
                         <img src="../../assets/image/portfolio/case/case-3.webp" width="100%" alt="case-1">
                     </a> 
-                    <a routerLink="/paris-select" class="case-items" ngxSlickItem>
+                    <!-- <a routerLink="/paris-select" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <h3 class="logo_card text">Paris Select</h3>
                             <div class="bottom_card">
@@ -220,7 +220,7 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-4.webp" width="100%" alt="case-4">
-                    </a>   
+                    </a>    -->
                     <a routerLink="/protech" class="case-items" ngxSlickItem>
                         <div class="card-h-txt">
                             <img class="logo_card protech" src="../../assets/image/attachment-protech.png" width="100%" alt="">
