--- a/src/app/resource-11/resource-11.component.html
+++ b/src/app/resource-11/resource-11.component.html
@@ -2,7 +2,7 @@
     <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
-                Section Store:
+                Elevate Your Shopify Store  with the Section Store Theme Sections App
             </h1>
             <div class="date-and-link-wrap flex-end">
                 <div class="date-wrap">
