--- a/src/app/resource-14/resource-14.component.html
+++ b/src/app/resource-14/resource-14.component.html
@@ -2,7 +2,7 @@
     <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
-                Pixelio Multi Facebook Pixels
+                Maximising ROI multi facebook pixels
             </h1>
             <div class="date-and-link-wrap flex-end">
                 <div class="date-wrap">
