--- a/src/app/resource-9/resource-9.component.html
+++ b/src/app/resource-9/resource-9.component.html
@@ -2,7 +2,7 @@
     <div id="container" class="container">
         <div class="blog-header">
             <h1 class="main-heading">
-                use & benifit Abra Auto Applied Discounts
+                Best Auto Discounts app for shopify store - Abra Auto
             </h1>
             <div class="date-and-link-wrap flex-end">
                 <div class="date-wrap">
