--- a/src/app/strategy/strategy.component.css
+++ b/src/app/strategy/strategy.component.css
@@ -18,7 +18,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     height: 700px;
     width: 100%;
 }
